1999-02-26  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* objectbase.h: Add CREATABLE tags to all non-abstract protocols.

1999-02-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* VarProbe.h (VarProbe): Implement VarProbe, not _VarProbe.

	* objectbase.h (VarProbe, _VarProbe): Merge.

1999-02-15  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* VarProbe.m: Include ../defobj/internal.h.

	* VarProbe.[hm], objectbase.h ([VarProbe -getRank], [VarProbe
	-getDims], [VarProbe -getBaseType], [VarProbe iterateAsDouble:using:],
	[VarProbe iterateAsInteger:using:], [VarProbe -drop]): New methods.
	(probe_as_int): New function.
	([VarProbe -probeAsInt:]): Use it.
	(probe_as_double): New function.
	([VarProbe -probeAsDouble:]): Use it.

	* VarProbe.m ([VarProbe -free]): Remove.

	* VarProbe.h (VarProbe): Add rank, dims, and baseType.

1999-02-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (CURRENT, REVISION, AGE): No changes.  Version 1.4.1.

1999-01-24  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* MessageProbe.m ([MessageProbe -doubleDynamicCallOn:]): 
	Don't munge return types for the sake of avcall; it's not broken.

1999-01-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* CompleteProbeMap.m, CompleteVarMap.m, CustomProbeMap.m,
	DefaultProbeMap.m, Probe.m, ProbeMap.m, VarProbe.m: Use raiseEvent()
	instead of raiseEvent: and WarningMessage instead of Warning.

1999-01-20  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.am (CURRENT): Bump.

1998-12-21  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* VarProbe.m: Don't include objc/objc.h.  Include misc.h
	instead of stdio.h.

	* CustomProbeMap.m: Include misc.h instead of stdarg.h.

1998-11-19  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* MessageProbe.m ([MessageProbe -createEnd]): Set arguments to NULL
	if no arguments; don't attempt malloc of size zero.

1998-11-12  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* objectbase.h (Arguments): Remove (moved to defobj.h).
