@@ -1,3 +1,8 @@
+1999-03-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* objectbase.h: Fix return type of getArg: (val_t), and correct
+	documentation for getArg: and getArgName:.
+
 1999-02-26  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* objectbase.h: Add CREATABLE tags to all non-abstract protocols.
